--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.6.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-lazy-load-image-component": "^1.5.1",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-scroll-section": "^3.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
