--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-scroll-section": "^3.1.0",
