--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-scroll-section": "^3.1.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
