--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
@@ -17,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-scroll-section": "^3.1.0",
     "react-slick": "^0.28.1",
+    "sass": "^1.52.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
